Fixed collapsing signin/reg buttons

--- a/src/static/stylus/styles/Register.styl
+++ b/src/static/stylus/styles/Register.styl
@@ -1,5 +1,9 @@
 .round-button--register
+  margin-top 30px
   color var(--white)
   background var(--pink)
   height 130px
   width 130px
+
+#reg-form
+  height 70vh
