--- a/src/static/stylus/styles/UserMain.styl
+++ b/src/static/stylus/styles/UserMain.styl
@@ -9,9 +9,8 @@
   color var(--white)
 
 .user-main--container
-  min-height 1150px
   padding 1rem
-  overflow scroll
+  overflow none
   &__button
     display flex
     // background rgba(250,250,250, .7)
