--- a/src/static/stylus/styles/UserPosts.styl
+++ b/src/static/stylus/styles/UserPosts.styl
@@ -22,7 +22,8 @@
   grid-auto-rows: 450px;
   grid-auto-flow: dense;
   width 90vw
-  height 100vh
+  height 80vh
+
 
 @media only screen and (max-width: 600px)
   .grid-container--user-main
